--- a/Keep Eating/UserSettings/Search.settings
+++ b/Keep Eating/UserSettings/Search.settings
@@ -9,7 +9,7 @@ showStatusBar = false
 scopes = {
 	"last_search.785D90A9" = "asset Store"
 	"InspectorPreview.785D90A9" = "0"
-	"currentGroup.785D90A9" = "scene"
+	"currentGroup.785D90A9" = "all"
 }
 providers = {
 	asset = {
@@ -49,6 +49,7 @@ providers = {
 	}
 }
 recentSearches = [
+	"asset Store"
 ]
 searchItemFavorites = [
 ]
